examples/errors/undefined_function/main.hd
fn main(): int {
    let result = compute(10);
    return result;
}
